# Cricket-Scraper

./: .replit  app.py  index.php  pyproject.toml  replit.md  scraper.py
admin/: index.php  matches.php  scraper.php  style.css
attached_assets/: Pasted--C-venv-root-mail-home-digitalcash24-cricbuzz-live-scor_1768347362833.txt  Pasted--C-venv-root-mail-home-digitalcash24-cricbuzz-live-scor_1768406497045.txt  Pasted--DOCTYPE-HTML-PUBLIC-W3C-DTD-HTML-3-2-Final-EN-html-hea_1768389196888.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charSet-utf-8-link_1768304707475.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charSet-utf-8-link_1768336057285.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charSet-utf-8-link_1768373372300.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charSet-utf-8-link_1768380655989.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charSet-utf-8-link_1768380882617.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charSet-utf-8-link_1768394835342.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charSet-utf-8-link_1768395614109.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charSet-utf-8-link_1768396166059.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charSet-utf-8-link_1768396336056.txt  Pasted--Enable-backwards-compatible-Server-Side-Include-expres_1768348167494.txt  Pasted--Flask-App-Jan-14-00-39-51-mail-digitalcash24-com-gunic_1768347601181.txt  Pasted--Last-login-Wed-Jan-14-01-10-57-2026-from-152-59-48-5-r_1768350216248.txt  Pasted--Logs-begin-at-Mon-2025-11-10-12-47-14-CET-end-at-Wed-2_1768401224930.txt  (+25 more)
config/: database.php  init_db.php
(+40 files in other folders)
